[gd_scene load_steps=3 format=3 uid="uid://c8rhu2omm2ail"]

[ext_resource type="Script" path="res://addons/ability_system_inspector/attribute_editor/editor_row_scene.gd" id="1_uqv4k"]

[sub_resource type="FontVariation" id="FontVariation_pgm21"]
variation_embolden = 0.5

[node name="AttributeEditorRow" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqv4k")

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Remove this attribute"
text = "âœ•"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_pgm21")
text = "attribute_identifier"

[node name="RangeLabel" type="Label" parent="Label"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "(0 - 1)"

[node name="ColorRect" type="ColorRect" parent="Label"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.470588, 0.470588, 1)

[node name="SpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
